docs/api/qiskit/0.30/qiskit.algorithms.MinimumEigensolverResult.md
# MinimumEigensolverResult[¶](#minimumeigensolverresult "Permalink to this headline")

<span id="undefined" />

`MinimumEigensolverResult`

Bases: `qiskit.algorithms.algorithm_result.AlgorithmResult`

Minimum Eigensolver Result.

## Methods

|                                                                                                                                                                         |                                                                        |
| ----------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------- |
| [`combine`](qiskit.algorithms.MinimumEigensolverResult.combine#qiskit.algorithms.MinimumEigensolverResult.combine "qiskit.algorithms.MinimumEigensolverResult.combine") | Any property from the argument that exists in the receiver is updated. |

## Attributes

<span id="undefined" />

### aux\_operator\_eigenvalues

return aux operator eigen values

**Return type**

`Optional`\[`ndarray`]

<span id="undefined" />

### eigenstate

return eigen state

**Return type**

`Optional`\[`ndarray`]

<span id="undefined" />

### eigenvalue

returns eigen value

**Return type**

`Optional`\[`complex`]
